@@ -567,15 +567,15 @@ config NXWM_CUSTOM_STARTWINDOW_ICON
 	bool "Custom Start Window Icon"
 	default n
 	---help---
-		Select to override the default Start Window Icon: NxWM::g_playBitmap
+		Select to override the default Start Window Icon: NxWM::g_playBitmap24x24
 
 if NXWM_CUSTOM_STARTWINDOW_ICON
 
 config NXWM_STARTWINDOW_ICON
 	string "StartWindow Icon"
-	default "NxWM::g_playBitmap"
+	default "NxWM::g_playBitmap24x24"
 	---help---
-		The glyph to use as the start window icon.  Default: NxWM::g_playBitmap
+		The glyph to use as the start window icon.  Default: NxWM::g_playBitmap24x24
 
 endif # NXWM_CUSTOM_STARTWINDOW_ICON
 
@@ -740,6 +740,16 @@ config NXWM_TOUCHSCREEN_LISTENERSTACK
 	default 1024
 	---help---
 		Touchscreen listener thread stack size.  Default 1024
+
+config NXWM_TOUSCHCREEN_CONFIGDATA
+	bool "Touchscreen configuration data"
+	default n
+	depends on PLATFORM_CONFIGDATA
+	---help---
+		If the architecture supports retention of configuration data, then
+		you may select this option to save touchscreen configuration data.
+		Otherwise, the touchscreen calibration must be performed each time
+		that you boot the system.
 
 endif # NXWM_TOUCHSCREEN
 endmenu # NxWM Touchscreen Configuration
