@@ -3,4 +3,15 @@
 # see misc/tools/kconfig-language.txt.
 #
 
+config PLATFORM_CONFIGDATA
+	bool "Platform configuration data"
+	default n
+	---help---
+		Set this option if the platform retention of configuration data.
+		This storage mechanism is platform dependent and must be implemented
+		in the platform specific directory under apps/platform/.  The
+		storage mechanism is not visible to applications so underlying non-
+		volatile storage can be used:  A file, EEPROM, hardcoded values in
+		FLASH, etc.
+
 source "$APPSDIR/platform/mikroe-stm32f4/Kconfig"
